k8s/front-ns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bravo-front-ns
  labels:
    name: bravo-front-ns
